--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
 <header>
-  <h1>Your Company Name</h1>
+  <h1>Xander Safety</h1>
   <p>Professional Safety Consulting & Field Support</p>
 </header>
 
