--- a/index.html
+++ b/index.html
@@ -37,11 +37,22 @@
 </header>
 
 <h2>Services</h2>
+
+<h3>Safety Personnel & Leadership</h3>
 <ul>
-  <li>Site Safety Inspections</li>
-  <li>Daily Walkthroughs</li>
-  <li>Safety Documentation & Audits</li>
+  <li><strong>Safety Advisors / Safety Officers</strong> – Day & night shift field coverage supporting construction, industrial, and energy projects</li>
+  <li><strong>Senior HSE Leads / Turnaround Safety Managers</strong> – Leadership-level safety management for shutdowns, turnarounds, and high-risk scopes</li>
+  <li><strong>Mine Site Safety Coordinators</strong> – On-site safety coordination, compliance monitoring, and workforce engagement for mining operations</li>
 </ul>
+
+<h3>Planning, Risk & Compliance Services</h3>
+<ul>
+  <li><strong>Project-Specific HSE Management Plans</strong> – Customized plans aligned with client, regulatory, and site-specific requirements</li>
+  <li><strong>Hazard Identification & Risk Assessment</strong> – FLHA, JHA/JSA, THA, and task-based risk assessments</li>
+  <li><strong>Incident Investigation & Root Cause Analysis</strong> – Corrective action development and compliance follow-up</li>
+  <li><strong>Audit & Compliance Support</strong> – COR, internal audits, and regulatory inspection readiness</li>
+</ul>
+
 
 <h2>About</h2>
 <p>
