--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Your Company Name</title>
+  <title>Xander Safety | HSE Consulting & Field Safety Support</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -18,6 +18,9 @@
     }
     h1 {
       margin-bottom: 5px;
+    }
+    h3 {
+      margin-top: 25px;
     }
     .btn {
       display: inline-block;
@@ -53,16 +56,42 @@
   <li><strong>Audit & Compliance Support</strong> – COR, internal audits, and regulatory inspection readiness</li>
 </ul>
 
+<h2>About Xander Safety</h2>
 
-<h2>About</h2>
 <p>
-We provide practical, field-driven safety solutions for industrial and construction environments.
+  <strong>Xander Safety</strong> is a field-driven health, safety, and environment (HSE) consulting company providing experienced
+  safety leadership, site coverage, and compliance support to industrial, construction, mining, and energy projects.
+</p>
+
+<p>
+  We specialize in practical, boots-on-the-ground safety support—not paperwork for the sake of paperwork. Our focus is on helping
+  clients manage risk at the workface, meet regulatory and client requirements, and maintain safe, productive operations without
+  slowing the job down.
+</p>
+
+<h3>What We Do</h3>
+<p>
+  Xander Safety supplies qualified safety professionals and HSE leadership to support projects of all sizes, from early works and
+  construction through shutdowns, turnarounds, and full operations.
+</p>
+
+<h3>Our Approach</h3>
+<ul>
+  <li><strong>Visible in the field</strong> — engaged at the workface with crews and supervision</li>
+  <li><strong>Aligned with operations</strong> — safety that supports productivity and schedule</li>
+  <li><strong>Communication-first</strong> — coaching, mentoring, and clear expectations</li>
+  <li><strong>Focused on critical controls</strong> — managing high-risk activities effectively</li>
+</ul>
+
+<p>
+  Xander Safety integrates directly into project teams, providing leadership, mentoring, and real-time risk management.
+  We support supervisors and workers in making safe decisions while maintaining quality and productivity.
 </p>
 
 <h2>Contact</h2>
-<p>Email: info@yourcompany.ca</p>
+<p>Email: info@xandersafety.ca</p>
 
-<a class="btn" href="mailto:info@yourcompany.ca">Contact Us</a>
+<a class="btn" href="mailto:info@xandersafety.ca">Contact Us</a>
 
 </body>
 </html>
