--- a/index.html
+++ b/index.html
@@ -2,96 +2,162 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Xander Safety | HSE Consulting & Field Safety Support</title>
+  <title>Xander Safety | Field HSE Support</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
-    body {
+    body{
       font-family: Arial, sans-serif;
-      max-width: 900px;
+      max-width: 980px;
       margin: auto;
       padding: 40px;
       line-height: 1.6;
     }
-    header {
+    header{
       border-bottom: 2px solid #000;
       margin-bottom: 30px;
+      padding-bottom: 10px;
     }
-    h1 {
-      margin-bottom: 5px;
+    h1{ margin: 0 0 6px 0; }
+    h2{ margin-top: 34px; }
+    h3{ margin-top: 18px; }
+    .sub{ margin-top: 0; }
+    .pill{
+      display:inline-block;
+      border:1px solid #000;
+      padding:4px 10px;
+      margin:6px 8px 0 0;
+      font-size: 14px;
     }
-    h3 {
-      margin-top: 25px;
-    }
-    .btn {
+    .btn{
       display: inline-block;
       padding: 10px 15px;
       background: #000;
       color: #fff;
       text-decoration: none;
       margin-top: 10px;
+      border: none;
+      cursor: pointer;
+    }
+    .grid{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 14px;
+    }
+    .field label{
+      display:block;
+      font-weight: bold;
+      margin-bottom: 6px;
+    }
+    input, textarea{
+      width:100%;
+      padding:10px;
+      border:1px solid #000;
+      border-radius: 4px;
+      font-size: 14px;
+      box-sizing: border-box;
+    }
+    textarea{ min-height: 120px; }
+    .small{ font-size: 13px; }
+    footer{
+      margin-top: 40px;
+      padding-top: 16px;
+      border-top: 1px solid #000;
+      font-size: 13px;
+    }
+    @media (max-width: 720px){
+      body{ padding: 22px; }
+      .grid{ grid-template-columns: 1fr; }
     }
   </style>
 </head>
+
 <body>
 
 <header>
   <h1>Xander Safety</h1>
-  <p>Professional Safety Consulting & Field Support</p>
+  <p class="sub">Field-driven HSE leadership, site coverage, and compliance support for mining, industrial, construction, and energy projects.</p>
+  <span class="pill">Day & Night Shift Coverage</span>
+  <span class="pill">Shutdowns & Turnarounds</span>
+  <span class="pill">Remote & Rotational Sites</span>
 </header>
+
+<h2>What We Provide</h2>
+<p>
+  Xander Safety delivers practical, boots-on-the-ground safety support that helps crews work safely, supervisors stay compliant,
+  and projects maintain productivity. We focus on real risk control at the workface—not paperwork for its own sake.
+</p>
 
 <h2>Services</h2>
 
 <h3>Safety Personnel & Leadership</h3>
 <ul>
   <li><strong>Safety Advisors / Safety Officers</strong> – Day & night shift field coverage supporting construction, industrial, and energy projects</li>
-  <li><strong>Senior HSE Leads / Turnaround Safety Managers</strong> – Leadership-level safety management for shutdowns, turnarounds, and high-risk scopes</li>
+  <li><strong>Senior HSE Leads / Turnaround Safety Managers</strong> – Leadership-level HSE management for shutdowns, turnarounds, and high-risk scopes</li>
   <li><strong>Mine Site Safety Coordinators</strong> – On-site safety coordination, compliance monitoring, and workforce engagement for mining operations</li>
 </ul>
 
-<h3>Planning, Risk & Compliance Services</h3>
+<h3>Planning, Risk & Compliance</h3>
 <ul>
-  <li><strong>Project-Specific HSE Management Plans</strong> – Customized plans aligned with client, regulatory, and site-specific requirements</li>
-  <li><strong>Hazard Identification & Risk Assessment</strong> – FLHA, JHA/JSA, THA, and task-based risk assessments</li>
-  <li><strong>Incident Investigation & Root Cause Analysis</strong> – Corrective action development and compliance follow-up</li>
-  <li><strong>Audit & Compliance Support</strong> – COR, internal audits, and regulatory inspection readiness</li>
+  <li><strong>Project-Specific HSE Management Plans</strong> – Site- and client-aligned plans, expectations, and critical controls</li>
+  <li><strong>Hazard Identification &amp; Risk Assessment</strong> – FLHA, JHA/JSA, THA, and task-based risk assessments</li>
+  <li><strong>Incident Investigation &amp; Corrective Actions</strong> – Root cause analysis, action tracking, and verification</li>
+  <li><strong>Audit &amp; Regulatory Readiness</strong> – COR support, internal audits, and inspection readiness</li>
 </ul>
 
 <h2>About Xander Safety</h2>
-
 <p>
-  <strong>Xander Safety</strong> is a field-driven health, safety, and environment (HSE) consulting company providing experienced
-  safety leadership, site coverage, and compliance support to industrial, construction, mining, and energy projects.
+  We integrate directly into project teams to strengthen safety performance through visible leadership, coaching, and consistent field presence.
+  Our approach is straightforward: focus on critical risks, communicate clearly, support supervisors, and build practical controls that work in real conditions.
 </p>
 
-<p>
-  We specialize in practical, boots-on-the-ground safety support—not paperwork for the sake of paperwork. Our focus is on helping
-  clients manage risk at the workface, meet regulatory and client requirements, and maintain safe, productive operations without
-  slowing the job down.
-</p>
-
-<h3>What We Do</h3>
-<p>
-  Xander Safety supplies qualified safety professionals and HSE leadership to support projects of all sizes, from early works and
-  construction through shutdowns, turnarounds, and full operations.
-</p>
-
-<h3>Our Approach</h3>
 <ul>
-  <li><strong>Visible in the field</strong> — engaged at the workface with crews and supervision</li>
-  <li><strong>Aligned with operations</strong> — safety that supports productivity and schedule</li>
-  <li><strong>Communication-first</strong> — coaching, mentoring, and clear expectations</li>
-  <li><strong>Focused on critical controls</strong> — managing high-risk activities effectively</li>
+  <li><strong>Workface-focused</strong> — engaged with crews where the risk actually exists</li>
+  <li><strong>Operations-aligned</strong> — safety that supports schedule, quality, and productivity</li>
+  <li><strong>Accountable</strong> — clear expectations, follow-up, and measurable improvement</li>
 </ul>
 
-<p>
-  Xander Safety integrates directly into project teams, providing leadership, mentoring, and real-time risk management.
-  We support supervisors and workers in making safe decisions while maintaining quality and productivity.
-</p>
-
 <h2>Contact</h2>
-<p>Email: info@xandersafety.ca</p>
+<p>Send a message and we’ll get back to you.</p>
 
-<a class="btn" href="mailto:info@xandersafety.ca">Contact Us</a>
+<!-- CONTACT FORM (Formspree) -->
+<form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+  <div class="grid">
+    <div class="field">
+      <label for="name">Name</label>
+      <input id="name" name="name" type="text" required>
+    </div>
+
+    <div class="field">
+      <label for="email">Email</label>
+      <input id="email" name="_replyto" type="email" required>
+    </div>
+  </div>
+
+  <div class="field" style="margin-top:14px;">
+    <label for="subject">Subject</label>
+    <input id="subject" name="subject" type="text" placeholder="Site coverage, turnaround support, HSE plan, etc." required>
+  </div>
+
+  <div class="field" style="margin-top:14px;">
+    <label for="message">Message</label>
+    <textarea id="message" name="message" required></textarea>
+  </div>
+
+  <!-- Optional: redirect to a thank-you page -->
+  <!-- <input type="hidden" name="_next" value="https://YOUR_SITE_URL/thanks.html"> -->
+
+  <button class="btn" type="submit">Send Message</button>
+  <p class="small">Or email: <a href="mailto:info@xandersafety.ca">info@xandersafety.ca</a></p>
+</form>
+
+<footer>
+  © <span id="year"></span> Xander Safety. All rights reserved.
+</footer>
+
+<script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
 
 </body>
 </html>
