--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Xander Safety | Field HSE Support</title>
+  <title>Xander Safety Ltd. | Field HSE Support</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
@@ -34,10 +34,9 @@
       padding: 10px 15px;
       background: #000;
       color: #fff;
-      text-decoration: none;
-      margin-top: 10px;
       border: none;
       cursor: pointer;
+      margin-top: 10px;
     }
     .grid{
       display:grid;
@@ -75,52 +74,56 @@
 <body>
 
 <header>
-  <h1>Xander Safety</h1>
-  <p class="sub">Field-driven HSE leadership, site coverage, and compliance support for mining, industrial, construction, and energy projects.</p>
+  <h1>Xander Safety Ltd.</h1>
+  <p class="sub">
+    Field-driven HSE leadership, site coverage, and compliance support for mining,
+    industrial, construction, and energy projects.
+  </p>
   <span class="pill">Day & Night Shift Coverage</span>
   <span class="pill">Shutdowns & Turnarounds</span>
   <span class="pill">Remote & Rotational Sites</span>
 </header>
 
-<h2>What We Provide</h2>
+<h2>What We Do</h2>
 <p>
-  Xander Safety delivers practical, boots-on-the-ground safety support that helps crews work safely, supervisors stay compliant,
-  and projects maintain productivity. We focus on real risk control at the workface—not paperwork for its own sake.
+  Xander Safety Ltd. provides practical, boots-on-the-ground safety support focused on
+  controlling real risk at the workface. We integrate directly into project teams to
+  support supervisors, crews, and management in maintaining safe, compliant, and
+  productive operations.
 </p>
 
 <h2>Services</h2>
 
 <h3>Safety Personnel & Leadership</h3>
 <ul>
-  <li><strong>Safety Advisors / Safety Officers</strong> – Day & night shift field coverage supporting construction, industrial, and energy projects</li>
-  <li><strong>Senior HSE Leads / Turnaround Safety Managers</strong> – Leadership-level HSE management for shutdowns, turnarounds, and high-risk scopes</li>
-  <li><strong>Mine Site Safety Coordinators</strong> – On-site safety coordination, compliance monitoring, and workforce engagement for mining operations</li>
+  <li><strong>Safety Advisors / Safety Officers</strong> – Day and night shift field coverage</li>
+  <li><strong>Senior HSE Leads / Turnaround Safety Managers</strong> – Leadership support for shutdowns and high-risk scopes</li>
+  <li><strong>Mine Site Safety Coordinators</strong> – On-site coordination and compliance monitoring</li>
 </ul>
 
 <h3>Planning, Risk & Compliance</h3>
 <ul>
-  <li><strong>Project-Specific HSE Management Plans</strong> – Site- and client-aligned plans, expectations, and critical controls</li>
-  <li><strong>Hazard Identification &amp; Risk Assessment</strong> – FLHA, JHA/JSA, THA, and task-based risk assessments</li>
-  <li><strong>Incident Investigation &amp; Corrective Actions</strong> – Root cause analysis, action tracking, and verification</li>
-  <li><strong>Audit &amp; Regulatory Readiness</strong> – COR support, internal audits, and inspection readiness</li>
+  <li><strong>Project-Specific HSE Management Plans</strong> – Client- and site-aligned safety planning</li>
+  <li><strong>Hazard Identification &amp; Risk Assessment</strong> – FLHA, JHA/JSA, THA, and task-based risk reviews</li>
+  <li><strong>Incident Investigation &amp; Corrective Actions</strong> – Root cause analysis and follow-up</li>
+  <li><strong>Audit &amp; Regulatory Readiness</strong> – COR support and inspection preparation</li>
 </ul>
 
-<h2>About Xander Safety</h2>
-<p>
-  We integrate directly into project teams to strengthen safety performance through visible leadership, coaching, and consistent field presence.
-  Our approach is straightforward: focus on critical risks, communicate clearly, support supervisors, and build practical controls that work in real conditions.
-</p>
-
+<h2>Our Approach</h2>
 <ul>
-  <li><strong>Workface-focused</strong> — engaged with crews where the risk actually exists</li>
-  <li><strong>Operations-aligned</strong> — safety that supports schedule, quality, and productivity</li>
-  <li><strong>Accountable</strong> — clear expectations, follow-up, and measurable improvement</li>
+  <li><strong>Field visible</strong> — active presence where work is performed</li>
+  <li><strong>Operations aligned</strong> — safety that supports productivity and schedule</li>
+  <li><strong>Accountable</strong> — clear expectations and follow-through</li>
 </ul>
 
 <h2>Contact</h2>
-<p>Send a message and we’ll get back to you.</p>
+<p>
+  Use the form below to request site coverage, project support, or safety planning
+  assistance. Messages are sent directly to
+  <strong>XanderSafetyltd@outlook.com</strong>.
+</p>
 
-<!-- CONTACT FORM (Formspree) -->
+<!-- CONTACT FORM -->
 <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
   <div class="grid">
     <div class="field">
@@ -136,7 +139,7 @@
 
   <div class="field" style="margin-top:14px;">
     <label for="subject">Subject</label>
-    <input id="subject" name="subject" type="text" placeholder="Site coverage, turnaround support, HSE plan, etc." required>
+    <input id="subject" name="subject" type="text" placeholder="Site coverage, turnaround, HSE plan, etc." required>
   </div>
 
   <div class="field" style="margin-top:14px;">
@@ -144,15 +147,15 @@
     <textarea id="message" name="message" required></textarea>
   </div>
 
-  <!-- Optional: redirect to a thank-you page -->
-  <!-- <input type="hidden" name="_next" value="https://YOUR_SITE_URL/thanks.html"> -->
-
   <button class="btn" type="submit">Send Message</button>
-  <p class="small">Or email: <a href="mailto:info@xandersafety.ca">info@xandersafety.ca</a></p>
+  <p class="small">
+    Or email directly:
+    <a href="mailto:XanderSafetyltd@outlook.com">XanderSafetyltd@outlook.com</a>
+  </p>
 </form>
 
 <footer>
-  © <span id="year"></span> Xander Safety. All rights reserved.
+  © <span id="year"></span> Xander Safety Ltd. All rights reserved.
 </footer>
 
 <script>
