--- a/index.html
+++ b/index.html
@@ -8,65 +8,104 @@
   <style>
     body{
       font-family: Arial, sans-serif;
-      max-width: 980px;
+      max-width: 1000px;
       margin: auto;
       padding: 40px;
       line-height: 1.6;
+      color: #111;
     }
+
     header{
-      border-bottom: 2px solid #000;
-      margin-bottom: 30px;
-      padding-bottom: 10px;
+      display: flex;
+      align-items: center;
+      gap: 24px;
+      border-bottom: 3px solid #000;
+      padding-bottom: 20px;
+      margin-bottom: 40px;
     }
-    h1{ margin: 0 0 6px 0; }
-    h2{ margin-top: 34px; }
-    h3{ margin-top: 18px; }
-    .sub{ margin-top: 0; }
+
+    header img{
+      max-width: 180px;
+      height: auto;
+    }
+
+    h1{
+      margin: 0;
+      font-size: 34px;
+    }
+
+    .sub{
+      margin-top: 6px;
+      font-size: 16px;
+    }
+
+    h2{ margin-top: 42px; }
+    h3{ margin-top: 22px; }
+
+    ul{
+      padding-left: 20px;
+    }
+
     .pill{
       display:inline-block;
-      border:1px solid #000;
+      border:2px solid #000;
       padding:4px 10px;
-      margin:6px 8px 0 0;
+      margin:8px 10px 0 0;
       font-size: 14px;
+      font-weight: bold;
     }
+
     .btn{
       display: inline-block;
-      padding: 10px 15px;
+      padding: 12px 18px;
       background: #000;
       color: #fff;
       border: none;
       cursor: pointer;
-      margin-top: 10px;
+      margin-top: 14px;
+      font-size: 15px;
     }
+
     .grid{
       display:grid;
       grid-template-columns: 1fr 1fr;
-      gap: 14px;
+      gap: 16px;
     }
+
     .field label{
       display:block;
       font-weight: bold;
       margin-bottom: 6px;
     }
+
     input, textarea{
       width:100%;
       padding:10px;
-      border:1px solid #000;
-      border-radius: 4px;
+      border:2px solid #000;
       font-size: 14px;
       box-sizing: border-box;
     }
-    textarea{ min-height: 120px; }
-    .small{ font-size: 13px; }
+
+    textarea{ min-height: 130px; }
+
     footer{
-      margin-top: 40px;
-      padding-top: 16px;
-      border-top: 1px solid #000;
+      margin-top: 50px;
+      padding-top: 20px;
+      border-top: 2px solid #000;
       font-size: 13px;
     }
-    @media (max-width: 720px){
-      body{ padding: 22px; }
-      .grid{ grid-template-columns: 1fr; }
+
+    @media (max-width: 768px){
+      header{
+        flex-direction: column;
+        text-align: center;
+      }
+      header img{
+        max-width: 200px;
+      }
+      .grid{
+        grid-template-columns: 1fr;
+      }
     }
   </style>
 </head>
@@ -74,93 +113,19 @@
 <body>
 
 <header>
-  <h1>Xander Safety Ltd.</h1>
-  <p class="sub">
-    Field-driven HSE leadership, site coverage, and compliance support for mining,
-    industrial, construction, and energy projects.
-  </p>
-  <span class="pill">Day & Night Shift Coverage</span>
-  <span class="pill">Shutdowns & Turnarounds</span>
-  <span class="pill">Remote & Rotational Sites</span>
+  <img src="logo.png" alt="Xander Safety Ltd. Logo">
+  <div>
+    <h1>Xander Safety Ltd.</h1>
+    <p class="sub">
+      Field-driven HSE leadership, site coverage, and compliance support for mining,
+      industrial, construction, and energy projects.
+    </p>
+    <span class="pill">Day & Night Shift Coverage</span>
+    <span class="pill">Shutdowns & Turnarounds</span>
+    <span class="pill">Remote & Rotational Sites</span>
+  </div>
 </header>
 
 <h2>What We Do</h2>
 <p>
-  Xander Safety Ltd. provides practical, boots-on-the-ground safety support focused on
-  controlling real risk at the workface. We integrate directly into project teams to
-  support supervisors, crews, and management in maintaining safe, compliant, and
-  productive operations.
-</p>
-
-<h2>Services</h2>
-
-<h3>Safety Personnel & Leadership</h3>
-<ul>
-  <li><strong>Safety Advisors / Safety Officers</strong> – Day and night shift field coverage</li>
-  <li><strong>Senior HSE Leads / Turnaround Safety Managers</strong> – Leadership support for shutdowns and high-risk scopes</li>
-  <li><strong>Mine Site Safety Coordinators</strong> – On-site coordination and compliance monitoring</li>
-</ul>
-
-<h3>Planning, Risk & Compliance</h3>
-<ul>
-  <li><strong>Project-Specific HSE Management Plans</strong> – Client- and site-aligned safety planning</li>
-  <li><strong>Hazard Identification &amp; Risk Assessment</strong> – FLHA, JHA/JSA, THA, and task-based risk reviews</li>
-  <li><strong>Incident Investigation &amp; Corrective Actions</strong> – Root cause analysis and follow-up</li>
-  <li><strong>Audit &amp; Regulatory Readiness</strong> – COR support and inspection preparation</li>
-</ul>
-
-<h2>Our Approach</h2>
-<ul>
-  <li><strong>Field visible</strong> — active presence where work is performed</li>
-  <li><strong>Operations aligned</strong> — safety that supports productivity and schedule</li>
-  <li><strong>Accountable</strong> — clear expectations and follow-through</li>
-</ul>
-
-<h2>Contact</h2>
-<p>
-  Use the form below to request site coverage, project support, or safety planning
-  assistance. Messages are sent directly to
-  <strong>XanderSafetyltd@outlook.com</strong>.
-</p>
-
-<!-- CONTACT FORM -->
-<form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-  <div class="grid">
-    <div class="field">
-      <label for="name">Name</label>
-      <input id="name" name="name" type="text" required>
-    </div>
-
-    <div class="field">
-      <label for="email">Email</label>
-      <input id="email" name="_replyto" type="email" required>
-    </div>
-  </div>
-
-  <div class="field" style="margin-top:14px;">
-    <label for="subject">Subject</label>
-    <input id="subject" name="subject" type="text" placeholder="Site coverage, turnaround, HSE plan, etc." required>
-  </div>
-
-  <div class="field" style="margin-top:14px;">
-    <label for="message">Message</label>
-    <textarea id="message" name="message" required></textarea>
-  </div>
-
-  <button class="btn" type="submit">Send Message</button>
-  <p class="small">
-    Or email directly:
-    <a href="mailto:XanderSafetyltd@outlook.com">XanderSafetyltd@outlook.com</a>
-  </p>
-</form>
-
-<footer>
-  © <span id="year"></span> Xander Safety Ltd. All rights reserved.
-</footer>
-
-<script>
-  document.getElementById("year").textContent = new Date().getFullYear();
-</script>
-
-</body>
-</html>
+  Xander Safety Ltd. provides practical, bo
