--- a/index.html
+++ b/index.html
@@ -128,4 +128,75 @@
 
 <h2>What We Do</h2>
 <p>
-  Xander Safety Ltd. provides practical, bo
+  Xander Safety Ltd. provides practical, boots-on-the-ground safety support focused on
+  controlling real risk at the workface. We integrate directly into project teams to
+  support supervisors, crews, and management in maintaining safe, compliant, and
+  productive operations.
+</p>
+
+<h2>Services</h2>
+
+<h3>Safety Personnel & Leadership</h3>
+<ul>
+  <li><strong>Safety Advisors / Safety Officers</strong> – Day and night shift field coverage</li>
+  <li><strong>Senior HSE Leads / Turnaround Safety Managers</strong> – Leadership support for shutdowns and high-risk scopes</li>
+  <li><strong>Mine Site Safety Coordinators</strong> – On-site coordination and compliance monitoring</li>
+</ul>
+
+<h3>Planning, Risk & Compliance</h3>
+<ul>
+  <li><strong>Project-Specific HSE Management Plans</strong> – Client- and site-aligned safety planning</li>
+  <li><strong>Hazard Identification &amp; Risk Assessment</strong> – FLHA, JHA/JSA, THA, and task-based risk reviews</li>
+  <li><strong>Incident Investigation &amp; Corrective Actions</strong> – Root cause analysis and follow-up</li>
+  <li><strong>Audit &amp; Regulatory Readiness</strong> – COR support and inspection preparation</li>
+</ul>
+
+<h2>Our Approach</h2>
+<ul>
+  <li><strong>Field visible</strong> — present where the work happens</li>
+  <li><strong>Operations aligned</strong> — safety that supports schedule and productivity</li>
+  <li><strong>Accountable</strong> — clear expectations and follow-through</li>
+</ul>
+
+<h2>Contact</h2>
+<p>
+  Use the form below to request site coverage, project support, or safety planning
+  assistance. Messages are sent directly to
+  <strong>XanderSafetyltd@outlook.com</strong>.
+</p>
+
+<form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+  <div class="grid">
+    <div class="field">
+      <label>Name</label>
+      <input name="name" type="text" required>
+    </div>
+    <div class="field">
+      <label>Email</label>
+      <input name="_replyto" type="email" required>
+    </div>
+  </div>
+
+  <div class="field" style="margin-top:16px;">
+    <label>Subject</label>
+    <input name="subject" type="text" required>
+  </div>
+
+  <div class="field" style="margin-top:16px;">
+    <label>Message</label>
+    <textarea name="message" required></textarea>
+  </div>
+
+  <button class="btn" type="submit">Send Message</button>
+</form>
+
+<footer>
+  © <span id="year"></span> Xander Safety Ltd. All rights reserved.
+</footer>
+
+<script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
+</body>
+</html>
